@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Added a cutoff when storing a PoE=1 from a CSV file, thus avoiding NaNs
+    in classical_damage calculations
   * Reduced the data transfer in the risk model by only considering the
     taxonomies relevant for the exposure
   * Extended `oq engine --run` to accept a comma-separated list of files
